:bug: Fixed mobile animation size and scrollbar bug
Previous bug introduced issue with mobile viewport size. Using javascript event to dynamically resize the animation container.

--- a/css/styles.css
+++ b/css/styles.css
@@ -97,6 +97,11 @@ body {
   /* height: 100%; */
 }
 
+#home {
+  height: var(--windowHeight, 1vh)
+  /* height: 100vh; */
+}
+
 ::-webkit-scrollbar {
   width: 1em;
 }
